[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemberta-v3-finetune"
version = "0.1.0"
description = "Hydra-based ChemBERTa-v3 downstream finetuning project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch==2.6.*",
  "transformers>=4.48",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "deepchem>=2.8.1",
  "scikit-learn>=1.5",
  "numpy>=1.26",
  "pandas>=2.2",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
